--- a/style.css
+++ b/style.css
@@ -7,4 +7,35 @@
 body {
     min-width: 100vh;
     min-height: 100vh;
+    background-color: beige;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-container {
+    min-height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.game-board {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 450px;
+    height: 450px;
+    border: 2px solid black;
+    margin: 0px auto;
+}
+
+.field {
+    border: 1px solid black;
+    background-color: aliceblue;
+    font-size: 1.1rem;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
 }
