--- a/style.css
+++ b/style.css
@@ -34,8 +34,21 @@ body {
 .field {
     border: 1px solid black;
     background-color: aliceblue;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     text-align: center;
     cursor: pointer;
     user-select: none;
+    padding: 60px;
+}
+
+a {
+    color: black;
+}
+
+button {
+    background-color: aliceblue;
+    font-size: 1.1rem;
+    padding: 15px 25px;
+    border: none;
+    border-radius: 12px;
 }
